# TidyTools

./: .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  Procfile  buildozer.spec  docker-compose.yml  heroku.yml  main.py  manf_query.py  pong.kv  pyproject.toml
.ci/: move_binary.py
.github/workflows/: build_app.yml
tools-api/: Dockerfile  app.py  manf_query.py  pyproject.toml  tool_query.py
tools-app/: buildozer.spec  main.py  pyproject.toml
